--- a/_ws/LojaGamerApi/LojaGamerApi.csproj
+++ b/_ws/LojaGamerApi/LojaGamerApi.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Oracle.EntityFrameworkCore" Version="8.21.140" />
   </ItemGroup>
 
 </Project>
